Basic mockup for Meditate page.

--- a/app/pages/meditate/meditate.page.scss
+++ b/app/pages/meditate/meditate.page.scss
@@ -1,3 +1,13 @@
 .meditate-page {
+  .time-container {
+    height: 20rem;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .time-text {
+      font-size: 10rem;
+    }
+  }
 }
